# web-traffic-time-series-forecasting

./: .gitignore  LICENSE  Makefile  README.md  eval.dvc  mkdocs.yml  process_data.dvc  pyproject.toml  setup.py  train.dvc
docs/: index.md
notebooks/: analyse_data.ipynb  tensorflow_model.ipynb
