[tool.poetry]
name = "web-traffic-time-series-forecasting"
version = "0.1.0"
description = "DS side projects. Forecast future traffic to Wikipedia pages."
authors = ["DS Team Betclic s.hakim@betclicgroup.com"]
repository = "https://github.com/SarahHakim-betclic/Web Traffic Time Series Forecasting"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "^0.20.0"
kaggle = "^1.5.12"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]

mkdocs-material = "^8.1.9"
mkdocstrings = "^0.18.0"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.4"
mkdocs-mermaid2-plugin = "^0.5.2"
mkdocs-jupyter = "^0.20.1"
great_expectations = "^0.14.5"
pytest = "^7.0.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
